--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#################################################################################################
+# Python.gitignore
+#################################################################################################
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,3 +209,34 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+#################################################################################################
+# Additional ignores for JavaScript/Node.js projects
+#################################################################################################
+
+# Dependency directories
+node_modules/
+
+# IDE related
+.idea
+
+# Test coverage
+coverage
+*.lcov
+
+# Optional eslint cache
+.eslintcache
+
+# dotenv environment variables file
+.env
+.env.test
+
+# build output
+.vercel
+
+# OS-specific
+.DS_Store
+
+tmp
+
+benchmarking/compare/.results
